tests/it/snapshots/it__completion__latex__begin_command.snap
---
source: tests/it/completion.rs
assertion_line: 203
expression: "complete_and_resolve(&server, uri, 0, 2)?"
---
{
  "isIncomplete": true,
  "items": [
    {
      "label": "b",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 2
          }
        },
        "newText": "b"
      }
    },
    {
      "label": "backslash",
      "kind": 1,
      "detail": "\\, built-in",
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 2
          }
        },
        "newText": "backslash"
      }
    },
    {
      "label": "badness",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 2
          }
        },
        "newText": "badness"
      }
    },
    {
      "label": "bar",
      "kind": 1,
      "detail": " ̄, built-in",
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 2
          }
        },
        "newText": "bar"
      }
    },
    {
      "label": "baselineskip",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 2
          }
        },
        "newText": "baselineskip"
      }
    },
    {
      "label": "baselinestretch",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "05",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 2
          }
        },
        "newText": "baselinestretch"
      }
    },
    {
      "label": "batchmode",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "06",
      "textEdit": {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 2
          }
        },
        "newText": "batchmode"
      }
    }
  ]
}
