tests/it/snapshots/it__completion__latex__kernel_command_glyph.snap
---
source: tests/it/completion.rs
assertion_line: 437
expression: "complete_and_resolve(&server, uri, 7, 7)?"
---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "varepsilon",
      "kind": 1,
      "detail": "ε, built-in",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 7,
            "character": 1
          },
          "end": {
            "line": 7,
            "character": 7
          }
        },
        "newText": "varepsilon"
      }
    }
  ]
}
