tests/it/snapshots/it__completion__latex__package_command.snap
---
source: tests/it/completion.rs
assertion_line: 529
expression: "complete_and_resolve(&server, uri, 3, 7)?"
---
{
  "isIncomplete": false,
  "items": [
    {
      "label": "varDelta",
      "kind": 1,
      "detail": "amsmath.sty",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 3,
            "character": 1
          },
          "end": {
            "line": 3,
            "character": 7
          }
        },
        "newText": "varDelta"
      }
    }
  ]
}
